[package]
name = "websocket-async-io"
version = "1.0.0"
edition = "2021"
description = "AsyncWrite/AsyncRead implementations for websockets"
repository = "https://github.com/jakobhellermann/websocket-async-io"
keywords = ["wasm", "websocket", "async", "async-io"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-io = "0.3"
futures-core = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
futures-channel = "0.3.17"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]


[dev-dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures-util = { version = "0.3", features = ["io"], default-features = false }


[workspace]
members = [".", "examples/*"]